# arna-organ

./: .gitignore  Cargo.toml  armónicos.txt  build.rs  fl studio reverb.md  makefile  readme.md  referencias.md
arnaudio/: Cargo.toml
arnaudio/src/: editor.rs  graphics.rs  lib.rs  synth.rs  voice.rs
arnaudio/src/graphics/: mod.rs  windows.rs
gui/: Cargo.toml
gui/src/: lib.rs  widget.rs  windows.rs
src/: editor.rs  effects.rs  effects.rs.no  hammond.rs  helpers.rs  lib.rs  organ.rs  pipe.rs  sample.rs  synth.rs  voice.rs
src/effects/: buffer.rs  leslie.rs  mod.rs  room.rs  vibrato.rs  waver.rs
